selfhost/test/typechecker/assignment/accessor_error_type_mismatch.1.out
Error at %FILE_NAME%:4:7
Type mismatch
  |  f.a = "abcd"
           ^
Expected: Int
but instead found: String
